fix video title alignment

--- a/demo/src/styles/demo.scss
+++ b/demo/src/styles/demo.scss
@@ -129,6 +129,7 @@ section {
       .video-stream {
         display: flex;
         align-items: center;
+        justify-content: space-between;
         padding: 10px;
         text-align: center;
         background-color: black;
